# tree-sitter-scenery

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-scenery.h  tree-sitter-scenery.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_scenery/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSceneryTests/: TreeSitterSceneryTests.swift
queries/: highlights.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
