[package]
name = "tree-sitter-scenery"
description = "Scenery lua"
version = "0.1.0"
authors = ["Pandaloop <hassan@pandaloop.de>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "scenery"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/pandaloop0/tree-sitter-scenery"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
